Add get article by id  handler
